<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical">

    <include layout="@layout/top_progressbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_huge"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/login_authorization"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_super_nano"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layerType="software"
                android:src="@drawable/dotted_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextLogin"
                    style="@style/edit_text.login"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textWebEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/edit_text.login"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBtnLogin"
                    style="@style/button.login"
                    android:layout_width="match_parent"
                    android:text="@string/login_enter" />

                <TextView
                    android:id="@+id/textViewBtnRegister"
                    style="@style/button.login"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:text="@string/login_register" />

                <TextView
                    android:id="@+id/textViewMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_wrong"
                    android:textColor="@color/red_dark"
                    android:visibility="gone" />
            </LinearLayout>


              <LinearLayout android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:background="@drawable/login_reminder"
                            android:padding="12dp"
                            android:layout_marginTop="@dimen/spacing_huge"
                            android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/reminderFullText"
                            android:text="@string/reminder_full_text"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:autoLink="web"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
              </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>